--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cuepal",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,14 +18,17 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.15",
+    "@prisma/client": "^5.6.0",
     "@tiptap/extension-character-count": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "tiptap": "^1.32.2"
   },
   "devDependencies": {
