--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
+    "@clerk/nextjs": "^4.27.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@phosphor-icons/react": "^2.0.15",
