--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.6.0",
     "@tiptap/extension-character-count": "^2.1.13",
+    "@tiptap/extension-placeholder": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
