--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "ai": "^2.2.27",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
+    "openai": "^4.20.1",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "tiptap": "^1.32.2"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
