--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "svix": "^1.14.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -44,6 +45,7 @@
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
 }
