--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
     "ai": "^2.2.27",
+    "apexcharts": "^3.44.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "openai": "^4.20.1",
     "prisma": "^5.6.0",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
